--- a/build.xml
+++ b/build.xml
@@ -6,65 +6,29 @@
 
 <target name="Builds">
 
-<property name="Files" value="C:\Windows\System32\config\systemprofile\AppData\Local\Jenkins\.jenkins\workspace\AntJobtoContinuousImport\bin\Projects"/>
-  <foreach target="execute">
+<property name="Files" value="C:/Windows/System32/config/systemprofile/AppData/Local/Jenkins/.jenkins/workspace/AntJobtoContinuousImport_4/OIC_CODE"/>
+  <for param="File" keepgoing="true">
+    
+    <path>
+    
     <fileset dir="${Files}" casesensitive="yes">
-      <include name="**/*.*"/>
+      <include name="**/*.xml"/>
+       
+    <!--  <exclude name="**/*.properties"/> -->
       
-    </fileset>
-  </foreach>
+       </fileset>
+      </path>
+    <sequential>
+    <ant antfile="@{File}"/>
+    
+      </sequential>
+  </for>
+  <echo>${File}</echo>
 </target>
-
+<!--
 <target name="execute" >
-  <ant antfile="../buil.xml"/>
+  <ant antfile="${File}"/>
   
 </target>
-
-
-</project>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<project name="testing" default="Builds">
-
-<taskdef resource="net/sf/antcontrib/antlib.xml"/>
-  
-
-
-<target name="Builds">
-
-<property name="Files" value="C:\Windows\System32\config\systemprofile\AppData\Local\Jenkins\.jenkins\workspace\AntJobtoContinuousImport\bin\Projects"/>
-  <foreach target="execute" param="theFile">
-    <fileset dir="${Files}" casesensitive="yes">
-      <include name="**/*.*"/>
-      
-    </fileset>
-  </foreach>
-</target>
-
-<target name="execute" >
-  <ant antfile="${theFile}"/>
-  
-</target>
-
-
+-->
 </project>
