--- a/PACKAGE_IMPORT/bin/build.xml
+++ b/PACKAGE_IMPORT/bin/build.xml
@@ -1,6 +1,6 @@
 <project name="Package_Import" default="Import">
   
-<property file=build.properties/>
+<property file="build.properties"/>
   
 <target name="Import">
 <exec executable="curl">
