--- a/PACKAGE_IMPORT/bin/build.properties
+++ b/PACKAGE_IMPORT/bin/build.properties
@@ -1,1 +1,2 @@
 USERNAME_PASSWORD=soumyadip.basu@lntinfotech.com:Soumya@89610
+PACKAGE_PATH=C:\Windows\System32\config\systemprofile\AppData\Local\Jenkins\.jenkins\workspace\AntJobtoImportPackage\PACKAGE_IMPORT\INTEGRATIONS_SB.par
