--- a/OIC_CODE/OIC_Project_3/bin/build.xml
+++ b/OIC_CODE/OIC_Project_3/bin/build.xml
@@ -1,6 +1,6 @@
 <project name="testing" default="Import">
 
-<property file="C:\Windows\System32\config\systemprofile\AppData\Local\Jenkins\.jenkins\workspace\AntJobtoContinuousImport_4\OIC_CODE\OIC_Project_3\bin\REST_TRIGGER_DEMO.properties"/>
+<property file="REST_TRIGGER_DEMO.properties"/>
  
 <target name="Import">
 <exec executable="curl">
