--- a/OIC_CODE/OIC_Project_4/bin/build.xml
+++ b/OIC_CODE/OIC_Project_4/bin/build.xml
@@ -1,6 +1,6 @@
 <project name="testing" default="Import">
 
-<property file="C:\Windows\System32\config\systemprofile\AppData\Local\Jenkins\.jenkins\workspace\AntJobtoContinuousImport_4\OIC_CODE\OIC_Project_4\bin\DATABASE_DEMO_AD.properties"/>
+<property file="DATABASE_DEMO_AD.properties"/>
  
 <target name="Import">
 <exec executable="curl">
