--- a/OIC_CODE/OIC_Project_1/bin/build.xml
+++ b/OIC_CODE/OIC_Project_1/bin/build.xml
@@ -1,6 +1,6 @@
 <project name="testing" default="Import">
 
-<property file="OIC_CODE/OIC_Project_1/build.properties" />
+<property file="OIC_CODE/OIC_Project_1/bin/build.properties" />
  
 <target name="Import">
 <exec executable="curl">
@@ -11,18 +11,9 @@
 
  <!--
 
-<target name="Activate" depends="Import">
-<exec executable="curl">
- <arg line = "curl -X POST -u ${USERNAME_PASSWORD} -H Content-Type:application/json -H X-HTTP-Method-Override:PATCH -d @${JSON_Location} https://oicintegrationinstance-bmcg1bx14wqj-bo.integration.ocp.oraclecloud.com/ic/api/integration/v1/integrations/${IAR_Name_Activation}"
-/>
-</exec>
-</target>
- -->
- <!--
-
 <target name="UpdateConnection" depends="Import">
 <exec executable="curl">
- <arg line = "curl -X POST -u soumyadip.basu@lntinfotech.com:Soumya@89610 -H Content-Type:application/json -H X-HTTP-Method-Override:PATCH -d @${JSON_Location_Connection} https://oicintegrationinstance-bmcg1bx14wqj-bo.integration.ocp.oraclecloud.com/ic/api/integration/v1/integrations/${IAR_Name_Activation}"
+ <arg line = "curl -X POST -u ${USERNAME_PASSWORD} -H Content-Type:application/json -H X-HTTP-Method-Override:PATCH -d @${JSON_Location_Connection} https://oicintegrationinstance-bmcg1bx14wqj-bo.integration.ocp.oraclecloud.com/ic/api/integration/v1/integrations/${IAR_Name_Activation}"
 />
 </exec>
 </target>
