--- a/Update_Lookup/bin/build.xml
+++ b/Update_Lookup/bin/build.xml
@@ -5,7 +5,7 @@
  
 <target name="UpdateLookUp">
 <exec executable="curl">
-<arg line="curl -X PUT -u ${USERNAME_PASSWORD} -H Content-Type:application/json -d @${​​​​​​​JSON_Location}​​​​​​​ https://oicintegrationinstance-bmcg1bx14wqj-bo.integration.ocp.oraclecloud.com/ic/api/integration/v1/lookups/${Loookup_Name}"/>
+<arg line="curl -X PUT -u ${USERNAME_PASSWORD} -H Content-Type:application/json -d @${JSON_Location} https://oicintegrationinstance-bmcg1bx14wqj-bo.integration.ocp.oraclecloud.com/ic/api/integration/v1/lookups/${Lookup_Name}"/>
 </exec>
 </target>
 </project>
