--- a/Update_Lookup/bin/build.xml
+++ b/Update_Lookup/bin/build.xml
@@ -1,7 +1,7 @@
 
 <project name="testing" default="UpdateLookUp">
 
-
+<property file="build.properties"/>
  
 <target name="UpdateLookUp">
 <exec executable="curl">
