--- a/OIC_CODE/OIC_Project_2/bin/build.xml
+++ b/OIC_CODE/OIC_Project_2/bin/build.xml
@@ -6,7 +6,7 @@
 <target name="Import">
 <exec executable="curl">
 
-<arg line="curl -X POST -u soumyadip.basu@lntinfotech.com:Soumya@89610 -H Accept:application/json -F file=@${IAR_Location} -F type=application/octet-stream https://oicintegrationinstance-bmcg1bx14wqj-bo.integration.ocp.oraclecloud.com/ic/api/integration/v1/integrations/archive"/>
+<arg line="curl -X POST -u ${USERNAME_PASSWORD} -H Accept:application/json -F file=@${IAR_Location} -F type=application/octet-stream https://oicintegrationinstance-bmcg1bx14wqj-bo.integration.ocp.oraclecloud.com/ic/api/integration/v1/integrations/archive"/>
 </exec>
 </target>
 <!--
